# bridge

./: .dockerignore  .gitignore  .http  .prettierrc.json  .vimspector.json  Cargo.toml  DCH-todo.txt  Dockerfile  Dockerfile_notebook  README.md  bacon.toml  build.zig  build.zig.zon  justfile  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  todo.md  tsconfig.json
.github/workflows/: merge.yml
config/: configurations_sample.toml  database_sample.toml  notebook.toml  services.toml  services_sample.toml
doc/: architecture.md  deployment.md  openshift.md  runbook.md
src/: lib.rs  main.rs
src/auth/: jwt.rs  mod.rs  openid.rs
src/config/: mod.rs
src/db/: deserialize.rs  keydb.rs  mod.rs  models.rs  mongo.rs
src/errors/: mod.rs
src/kube/: mod.rs  models.rs  notebook_lifecycle.rs
src/kube/notebook/: mod.rs  notebook_lifecycle.rs
src/kube/openwebui/: mod.rs
src/logger/: futures.rs  mod.rs  observability.rs
src/templating/: mod.rs
src/web/: helper.rs  mod.rs
src/web/bridge_middleware/: authenicate.rs  cookie_check.rs  errors.rs  htmx.rs  https.rs  maintenance.rs  mod.rs  notebook_cookie_check.rs  openwebui_cookie_check.rs  resource_cookie_check.rs  security_cache_header.rs  security_header.rs
src/web/guardian_middleware/: authenicate.rs  cookie_check.rs  errors.rs  htmx.rs  https.rs  maintenance.rs  mod.rs  notebook_cookie_check.rs  security_header.rs
src/web/route/: foo.rs  health.rs  mod.rs  proxy.rs
src/web/route/auth/: deserialize.rs  mod.rs  oauth.rs
src/web/route/group/: mod.rs
src/web/route/groups/: mod.rs
src/web/route/health/: inference_services.rs  mod.rs
src/web/route/mcp/: mod.rs
src/web/route/member/: mod.rs
src/web/route/members/: mod.rs
src/web/route/moleviewer/: mod.rs
src/web/route/notebook/: mod.rs  ws.rs
src/web/route/openwebui/: mod.rs
src/web/route/portal/: group_admin.rs  helper.rs  mod.rs  profile_htmx.rs  system_admin.rs  token.rs  user.rs  user_htmx.rs
src/web/route/portal/group_admin/: htmx.rs  mod.rs
src/web/route/portal/system_admin/: htmx.rs  mod.rs
src/web/route/proxy/: mod.rs  services.rs
src/web/route/resource/: mod.rs
src/web/route/token/: mod.rs
src/web/route/user/: mod.rs
src/web/route/users/: mod.rs
src/web/tls/: mod.rs
static/@carbon/styles/scss/: _config.scss
static/css/: carbon-bridge.css  carbon-skin.css  dashboard.css  input.css  main.css  nav.css  output.css  pulse.css  theme_selector.css  token.css
static/js/: color_modes.js  main.js
static/scss/: main.scss
static/ts/: main.ts
static/wasm/: lib.zig
templates/: 400.html  401.html  403.html  404.html  500.html  admin.html  base-guest.html  base-user.html  base.html  base_beta.html  base_guest.html  base_user.html  foundation.html  group_admin.html  icons.html  login.html  login_success.html  login_video.html  main.html  maintenance.html  nav-guest.html  nav-template.html  nav-user.html  portal.html  portal_beta.html  profile.html  pulse.html  system_admin.html  system_admin_group.html  test.html  token.html  user.html
templates/components/: backlink.html  code_block.html  group_create.html  group_edit.html  group_member_tab.html  group_view.html  groups.html  member_add.html  member_email_result_group.html  member_email_result_system.html  member_manage.html  member_view.html  members.html  nav.html  nav_guest.html  nav_template.html  nav_user.html  notebook.html  notebook_poll.html  notebook_ready.html  profile.html  subscription_details.html  systems.html  systems_group.html  systems_user.html  token.html  user_edit.html  user_member_edit.html  user_view.html  user_view_result.html  user_view_result_group.html  user_view_result_system.html  users.html
templates/components/notebook/: notebook.html  poll.html  ready.html  start.html
templates/components/owui/: owui.html
templates/group/: admin.html  modify_user.html  profile_group.html
templates/icons/: icn-bee.html  icn-logout.html
templates/pages/: 400.html  401.html  403.html  404.html  500.html  group.html  groups.html  login.html  login_success.html  maintenance.html  member_add.html  member_view.html  members.html  nav_base.html  pending_user.html  portal.html  portal_group.html  portal_system.html  portal_user.html  pulse.html  user.html  users.html
templates/system/: admin.html  admin_group.html  create_group.html  delete_user.html  modify_group.html  modify_user.html  profile_system.html
templates/trash/: dch.txt  group.html  group_edit.html  groups.html  login_video.html  token--unused.html  user_edit.html  users.html
templates/user/: profile_user.html  user.html
utils/: Cargo.toml
utils/src/: lib.rs
