[package]
name = "guardian"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guardian"
path = "./src/main.rs"

[dependencies]
# Async dep
tokio = {version = "1", features = ["full"]}
futures = "0.3"
tracing = "~0.1"
tracing-subscriber = "~0.3"
# User deps
uuid = {version = "1.2", features = ["v4"]}
# Other deps
chrono = "0.4"
parking_lot = "0.12"
# Web deps
actix-web = { version = "~4.8", features = ["rustls-0_23", "cookies"] }
actix-web-httpauth = "0.8"
tera = "1.20.0"
reqwest = { version = "0.12", features = ["stream"] }
url = "2.5.0"
toml = "0.8.14"
# Auth deps
argon2 = { version = "0.5", features = ["std"] }
rand_core = { version = "0.6", features = ["std"] }
sha2 = "~0.10"
jsonwebtoken = { version = "9.0.0", features = ["use_pem"] }
openssl = "~0.10"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.0"
rustls-pki-types = "1.0.1"
openidconnect = "3.5"
# Serialization
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0.81"
# Error handling
thiserror = "1.0.61"
# Async
futures-util = "0.3.30"
tokio-stream = { version = "0.1.15", features = ["sync"] }

[profile.dev]
opt-level = 0
debug = 2
overflow-checks = true
incremental = true
lto = false
[profile.release]
opt-level = 3
overflow-checks = false
debug-assertions = false
incremental = false
lto = true
