[package]
name = "guardian"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "guardian"
path = "./src/main.rs"

[workspace]
members = ["utils"]

[features]
notebook = ["kube"]
kube = []

[dependencies]
# Async dep
tokio = {version = "1", features = ["full"]}
futures = "0.3"
tracing = "~0.1"
tracing-subscriber = "~0.3"
futures-util = "0.3.30"
tokio-stream = { version = "0.1.15", features = ["sync"] }
# Other deps
# parking_lot = "0.12"
time = { version = "0.3.36", features = ["serde"] }
# Web deps
actix-web = { version = "~4.9", features = ["rustls-0_23", "cookies"] }
actix-web-httpauth = "0.8"
actix-files = "0.6.6"
tera = "1.20.0"
reqwest = { version = "0.12", features = ["stream"] }
url = "2.5.0"
toml = "0.8.14"
urlencoding = "2.1.3"
actix-ws = "0.3.0"
tokio-tungstenite = { version = "0.24.0", features = ["url"] }
# Auth deps
argon2 = { version = "0.5", features = ["std"] }
rand_core = { version = "0.6", features = ["std"] }
sha2 = "~0.10"
jsonwebtoken = { version = "9.0.0", features = ["use_pem"] }
openssl = "~0.10"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.0"
rustls-pki-types = "1.0.1"
openidconnect = "3.5"
# Serialization
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
serde_urlencoded = "0.7.1"
# Error handling
thiserror = "2"
# DB
mongodb = "~3.0"
#macro
utils = { path = "utils" }
# Kubernetes
kube = { version = "0.96", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23", features = ["latest"] }
schemars = "0.8.21"
either = "1.13.0"

[workspace.dependencies]
quote = "1.0"
syn = "2.0"

[profile.dev]
opt-level = 0
debug = 2
overflow-checks = true
incremental = true
lto = false
[profile.release]
opt-level = 3
overflow-checks = false
debug-assertions = false
incremental = false
lto = true
