[package]
name = "openbridge"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "openbridge"
path = "./src/main.rs"

[workspace]
members = ["utils"]

[features]
notebook = ["dep:kube", "dep:k8s-openapi", "dep:schemars", "dep:either"]
lifecycle = ["notebook"]

[dependencies]
# Async dep
tokio = {version = "1", features = ["full"]}
futures = "0.3"
tracing = "~0.1"
tracing-subscriber = "~0.3"
futures-util = "0.3.30"
tokio-stream = { version = "0.1.15", features = ["sync"] }
pin-project = "1"
# Other dep
time = { version = "0.3.36", features = ["serde"] }
parking_lot = "~0.12"
num-bigint = "~0.4"
# Web deps
actix-web = { version = "~4.10", features = ["rustls-0_23", "cookies"] }
actix-web-httpauth = "0.8"
actix-files = "0.6.6"
tera = { version = "1.20.0", features= ["builtins"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
url = "2.5.0"
toml = "0.8.14"
urlencoding = "2.1.3"
actix-ws = "0.3.0"
tokio-tungstenite = { version = "0.26", features = ["url", "rustls-tls-native-roots"] }
# Auth deps
rust-argon2 = "~2.1"
sha2 = "~0.10"
jsonwebtoken = { version = "9.0.0", features = ["use_pem"] }
openssl = "~0.10"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.0"
rustls-pki-types = "1.0.1"
openidconnect = "4.0"
p256 = { version = "0.13.2", features = ["jwk"] }
# Serialization
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
serde_urlencoded = "0.7.1"
regex = "~1.11"
# Error handling
thiserror = "2"
# DB
mongodb = "~3.2"
redis = { version = "0.29", features = ["tokio-comp", "num-bigint"] }
#macro
utils = { path = "utils" }
# Kubernetes
kube = { version = "0.99", features = ["runtime", "derive"], optional = true }
k8s-openapi = { version = "0.24", features = ["latest"], optional = true }
schemars = { version = "0.8.21", optional = true }
either = { version = "1.13.0", optional = true }
# memory allocator
mimalloc = "~0.1"
# security
base64 = "~0.22.1"
rand = "~0.9"
uuid = { version = "~1.15", features = ["v4"] }

[dev-dependencies]
jsonwebkey = { version = "~0.3", features = ["jwt-convert"] }

[workspace.dependencies]
quote = "1.0"
syn = "2.0"

[profile.dev]
opt-level = 0
debug = 2
overflow-checks = true
incremental = true
lto = false
[profile.release]
opt-level = 3
overflow-checks = false
debug-assertions = false
incremental = false
lto = true
